--- a/17-code-structure/package.json
+++ b/17-code-structure/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "17-code-structure",
+  "name": "express-mvc-ejercicios",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "type": "module",
+  "description": "Proyecto de ejemplo MVC con rutas /ping y /fibonacci para DWES",
+  "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env src/index.js",
-    "dev": "node --env-file=.env --watch src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "express": "^4.19.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1",
+    "nodemon": "^3.1.0"
   }
 }
