--- a/notas-proyecto/package.json
+++ b/notas-proyecto/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
+    "js-yaml": "^4.1.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
