--- a/notas-proyecto/package.json
+++ b/notas-proyecto/package.json
@@ -22,6 +22,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.1.1"
