--- a/28-smtp-service/package.json
+++ b/28-smtp-service/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "send-test": "node scripts/send-test.js"
   },
   "keywords": [
     "smtp",
