--- a/27-api-services/package.json
+++ b/27-api-services/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "call-sample": "node scripts/call-sample.js"
   },
   "keywords": [
     "api",
