--- a/12-setup-workspace/package.json
+++ b/12-setup-workspace/package.json
@@ -32,5 +32,8 @@
     "neostandard": "^0.12.2",
     "sonar-scanner": "^3.1.0",
     "vitest": "^4.0.4"
+  },
+  "overrides": {
+    "js-yaml": "4.1.1"
   }
 }
