--- a/17f/package.json
+++ b/17f/package.json
@@ -18,5 +18,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "overrides": {
+    "body-parser": "2.2.1",
+    "qs": "6.14.1",
+    "@istanbuljs/load-nyc-config": {
+      "js-yaml": "3.14.2"
+    }
   }
 }
