--- a/18-rest-api/package.json
+++ b/18-rest-api/package.json
@@ -18,5 +18,11 @@
     "jest": "^29.7.0",
     "supertest": "^7.1.1",
     "nodemon": "^3.1.0"
+  },
+  "overrides": {
+    "qs": "6.14.1",
+    "@istanbuljs/load-nyc-config": {
+      "js-yaml": "3.14.2"
+    }
   }
 }
