--- a/20-api-security/package.json
+++ b/20-api-security/package.json
@@ -19,5 +19,12 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.1.1"
+  },
+  "overrides": {
+    "qs": "6.14.1",
+    "tar": "7.5.4",
+    "@istanbuljs/load-nyc-config": {
+      "js-yaml": "3.14.2"
+    }
   }
 }
