--- a/JMO-Backend/package.json
+++ b/JMO-Backend/package.json
@@ -9,6 +9,8 @@
     "dev": "nodemon index.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "test:fast": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
+    "test:unit": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --testPathIgnorePatterns=/test/m2m/",
+    "test:m2m": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/m2m",
     "test:coverage": "npm test",
     "sonar": "npm run test:coverage && npx sonar-scanner",
     "db:setup": "node src/db/setup.js"
@@ -18,10 +20,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "js-yaml": "^4.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
