--- a/JMO-Backend/sonar-project.properties
+++ b/JMO-Backend/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.test.inclusions=test/**/*.test.js
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.coverage.exclusions=test/**,**/*.test.js,src/index.js,src/db/setup.js,src/db/pool.js,src/loaders/**,src/routes/**
+sonar.cpd.exclusions=src/routes/**
 sonar.exclusions=node_modules/**,coverage/**,uploads/**
 
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://127.0.0.1:9000
