--- a/JMO-Backend/package.json
+++ b/JMO-Backend/package.json
@@ -13,7 +13,11 @@
     "test:m2m": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/m2m",
     "test:coverage": "npm test",
     "sonar": "npm run test:coverage && npx sonar-scanner",
-    "db:setup": "node src/db/setup.js"
+    "db:setup": "node src/db/setup.js",
+    "db:drizzle:generate": "drizzle-kit generate",
+    "db:drizzle:migrate": "drizzle-kit migrate",
+    "db:drizzle:push": "drizzle-kit push",
+    "db:drizzle:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,10 +29,12 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.12.0",
+    "drizzle-orm": "^0.44.0",
     "socket.io": "^4.8.3",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.31.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.1.1"
