--- a/JMO-Backend/package.json
+++ b/JMO-Backend/package.json
@@ -9,9 +9,12 @@
     "dev": "nodemon index.js",
     "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "test:fast": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js",
-    "test:unit": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --testPathIgnorePatterns=/test/m2m/",
-    "test:m2m": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/m2m",
+    "test:unit": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --testPathPattern=test/unit",
+    "test:funcional": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/funcional",
+    "test:m2m": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --testPathPattern=test/funcional/m2m",
     "test:coverage": "npm test",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "sonar": "npm run test:coverage && npx sonar-scanner",
     "db:setup": "node src/db/setup.js",
     "db:drizzle:generate": "drizzle-kit generate",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "drizzle-kit": "^0.31.0",
+    "eslint": "^9.34.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.1.1"
